
With the current version, if the size of the array exceeds jdibug-locals-max-array-size, expanding the array
shows subarrays, which can be expanded.  While it might take 3 or 4 clicks to find the entry, those clicks
respond much more quickly so the process should be much faster, even with the extra actions.


* 0.4 (2010-12-05)

** Added simple function to start a program and attach a debugger.
See `jdibug-run'.

** Added expression watchpoints.
The *JDIbug-Watchpoints* window now displays expressions.  Current
support is moderate:
***  Multiplication, division, addition, subtraction
***  Logical and, or
***  Numerical comparisons (<,>,<=,>=,==,!=)
***  Array element access
***  Constant numbers
***  Field access via dot notation (a.b.c)
***  Method calls (foo.bar(baz)) (only tested for no-arg methods)
More should be added soon.

** Added conditional breakpoints.
Any valid expression for a watchpoint that evaluates to a boolean can
be added as condition to breakpoint.  The check on a boolean value is
made at runtime.  To add a conditional breakpoint, create a breakpoint
normally.  Select it in the breakpoints buffer and type "c".

** Added support for breakpoints in inner classes.
In previous version, breakpoints in inner classes where ignored.  They
now work in both anonymous and named inner classes.

* 0.3 (2010-04-28)

** Supports multi dimensional array
Now supports displaying/expanding of multi dimensional array.

** Supports generics
Now the locals browser supports displaying generics as
ArrayList<String>. I do not understand why Eclipse is displaying it
as ArrayList<E>!

** Supports connecting to multiple debuggee
Now JDIbug can connect to multiple debuggee on different host:port.
The configuration parameter jdibug-connect-host and jdibug-connect-port
have been merged into a jdibug-connect-hosts which should be set
to a list, containing strings of "host:port". You can then set
breakpoints in any of the files in any of the debuggee.
